// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutgoingPaymentRequestSummaryNotification renders a number when the address mapping is cached 1`] = `
<View
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "padding": 16,
        },
        {
          "borderRadius": 8,
        },
        undefined,
        [
          {
            "borderColor": "#E6E6E6",
            "borderWidth": 1,
            "flex": 1,
            "minHeight": 144,
          },
          {},
        ],
      ]
    }
    testID="OutgoingPaymentRequestNotification/FAKE_ID_1"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginRight": 16,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Title"
        >
          outgoingPaymentRequestNotificationTitle, {"name":"John Doe"}
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 24,
              "lineHeight": 28,
              "marginBottom": 2,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Amount"
        >
          <Text
            style={
              [
                undefined,
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            ₱
            266,000.00
          </Text>
        </Text>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Details"
        >
          Dinner for me and the gals, PIZZAA!
        </Text>
      </View>
      <View
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "hsl(0, 53%, 93%)",
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                  },
                  {
                    "color": "hsl(0, 67%, 24%)",
                    "fontSize": 20,
                  },
                ]
              }
            >
              J
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-start",
        }
      }
      testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions/remind/Button"
      >
        <Text
          style={
            [
              {
                "color": "#1AB775",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "fontSize": 14,
                "lineHeight": 16,
                "marginRight": 24,
                "minHeight": 16,
                "minWidth": 48,
              },
            ]
          }
        >
          remind
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions/cancel/Button"
      >
        <Text
          style={
            [
              {
                "color": "#1AB775",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "fontSize": 14,
                "lineHeight": 16,
                "marginRight": 24,
                "minHeight": 16,
                "minWidth": 48,
              },
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OutgoingPaymentRequestSummaryNotification renders correctly for just one alone 1`] = `
<View
  style={
    {
      "marginBottom": 16,
    }
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "#FFFFFF",
          "padding": 16,
        },
        {
          "borderRadius": 8,
        },
        undefined,
        [
          {
            "borderColor": "#E6E6E6",
            "borderWidth": 1,
            "flex": 1,
            "minHeight": 144,
          },
          {},
        ],
      ]
    }
    testID="OutgoingPaymentRequestNotification/FAKE_ID_1"
  >
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
            "marginRight": 16,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#666666",
              "fontFamily": "Inter-Regular",
              "fontSize": 13,
              "lineHeight": 16,
              "marginBottom": 4,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Title"
        >
          outgoingPaymentRequestNotificationTitle, {"name":"John Doe"}
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 24,
              "lineHeight": 28,
              "marginBottom": 2,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Amount"
        >
          <Text
            style={
              [
                undefined,
                {
                  "color": undefined,
                },
              ]
            }
            testID="undefined/value"
          >
            ₱
            266,000.00
          </Text>
        </Text>
        <Text
          style={
            {
              "color": "#2E3338",
              "fontFamily": "Inter-Regular",
              "fontSize": 14,
              "lineHeight": 18,
            }
          }
          testID="OutgoingPaymentRequestNotification/FAKE_ID_1/Details"
        >
          Dinner for me and the gals, PIZZAA!
        </Text>
      </View>
      <View
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "backgroundColor": "hsl(0, 53%, 93%)",
                  "borderRadius": 20,
                  "height": 40,
                  "width": 40,
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              style={
                [
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                  },
                  {
                    "color": "hsl(0, 67%, 24%)",
                    "fontSize": 20,
                  },
                ]
              }
            >
              J
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "flex-start",
        }
      }
      testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions"
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions/remind/Button"
      >
        <Text
          style={
            [
              {
                "color": "#1AB775",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "fontSize": 14,
                "lineHeight": 16,
                "marginRight": 24,
                "minHeight": 16,
                "minWidth": 48,
              },
            ]
          }
        >
          remind
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          {
            "attribute": "selectableItemBackgroundBorderless",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID="OutgoingPaymentRequestNotification/FAKE_ID_1/CallToActions/cancel/Button"
      >
        <Text
          style={
            [
              {
                "color": "#1AB775",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 16,
                "lineHeight": 22,
              },
              {
                "fontSize": 14,
                "lineHeight": 16,
                "marginRight": 24,
                "minHeight": 16,
                "minWidth": 48,
              },
            ]
          }
        >
          cancel
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OutgoingPaymentRequestSummaryNotification renders correctly for multiple requests 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "padding": 16,
      },
      {
        "borderRadius": 8,
      },
      undefined,
      [
        {
          "borderColor": "#E6E6E6",
          "borderWidth": 1,
          "flex": 1,
          "minHeight": 144,
        },
        {},
      ],
    ]
  }
>
  <View
    style={
      {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        {
          "width": 40,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          {
            "testUri": "../../../src/images/notification-outgoing-request.png",
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "space-between",
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2E3338",
            "fontFamily": "Jost-Medium",
            "fontSize": 18,
            "lineHeight": 22,
            "marginBottom": 4,
          }
        }
        testID="undefined/Title"
      >
        outgoingPaymentRequestsSummaryTitle, {"count":3}
      </Text>
      <Text
        numberOfLines={3}
        style={
          {
            "color": "#505050",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
        testID="undefined/Details"
      >
        outgoingPaymentRequestsSummaryDetails, {"context":"exactly3Items"}
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
          }
        }
        testID="undefined/CallToActions"
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            {
              "attribute": "selectableItemBackgroundBorderless",
              "rippleRadius": undefined,
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="undefined/CallToActions/viewAll/Button"
        >
          <Text
            style={
              [
                {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                {
                  "fontSize": 14,
                  "lineHeight": 16,
                  "marginRight": 24,
                  "minHeight": 16,
                  "minWidth": 48,
                },
              ]
            }
          >
            viewAll
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
